# scigma

./: .gitignore  LICENSE  README  README.md  kayak_mod.py  runscigma.py
.github/workflows/: build.yml  build_and_release.yml
examples/: contdemo.py  stgrid.py  stmovie.py
manual/: MacOsInstallInstructions.md  manual.tex  windowsInstallInstructions.md
scigma/: __init__.py  color.py  commands.py  continuation.py  cppwrapper.py  default.py  equations.py  graphs.py  guessing.py  instance.py  iteration.py  library.py  log.py  manifolds.py  maxpts.py  objects.py  options.py  picking.py  popups.py  style.py  sweeping.py  util.py  view.py  window.py  windowlist.py
scigma/common/: __init__.py  blob.py  log.py  util.py
scigma/dat/: __init__.py  bwave.py  iwave.py  mesh.py  wave.py
scigma/gui/: __init__.py  application.py  atwpanel.py  bundle.py  color.py  console.py  constants.py  cosy.py  curve.py  glwindow.py  graph.py  mouse.py  navigator.py  picker.py  sheet.py
scigma/num/: __init__.py  constants.py  equationsystem.py  gsortho.py
source/: CMakeLists.txt  CMakeLists.txt_OBJECTS  events.h  log.cpp  log.h  pythonobject.h  pythonwrapper.cpp  util.h
source/common/: CMakeLists.txt  CMakeLists.txt_OBJECTS  blob.cpp  blob.hpp  blobwrapper.cpp  events.hpp  log.cpp  log.hpp  logwrapper.cpp  pythonobject.hpp  util.cpp  util.hpp
source/common/test/: CMakeLists.txt  CMakeLists.txt_OBJECTS  log_test.cpp  pythonobject_test.cpp
source/dat/: CMakeLists.txt  CMakeLists.txt_OBJECTS  datwrapper.cpp  mesh.cpp  mesh.hpp  pythonwrapper.cpp  wave.cpp  wave.h  wave.hpp
source/dat/test/: CMakeLists.txt  CMakeLists.txt_OBJECTS  mesh_test.cpp  wave_test.cpp
source/gui/: CMakeLists.txt  CMakeLists.txt_OBJECTS  application.cpp  application.h  application.hpp  applicationwrapper.cpp  atwpanel.cpp  atwpanel.h  atwpanel.hpp  atwpanelwrapper.cpp  bundle.cpp  bundle.hpp  bundleGL2.vert  bundleGL3.vert  bundleshaders.hpp  console.cpp  console.h  console.hpp  consolewrapper.cpp  cosy.cpp  cosy.h  cosy.hpp  cosywrapper.cpp  curve.cpp  curve.h  definitions.h  definitions.hpp  drawable.cpp  drawable.h  drawable.hpp  drawabletypes.h  drawabletypes.hpp  font.cpp  font.h  font.hpp  fontdata.hpp  glbuffer.hpp  glcontext.cpp  glcontext.h  glcontext.hpp  (+57 more)
source/gui/test/: CMakeLists.txt  CMakeLists.txt_OBJECTS  application_test.cpp  bundletest.hpp  glbuffer_test.cpp  guivtest.cpp  sheettest.hpp
source/num/: CMakeLists.txt  CMakeLists.txt_OBJECTS  auto.cpp  auto.hpp  continuationwrapper.cpp  definitions.h  eigen.cpp  eigen.h  eigen.hpp  equationsystem.cpp  equationsystem.h  equationsystem.hpp  equationsystemwrapper.cpp  externalequationsystem.cpp  externalequationsystem.hpp  externalodessastepper.cpp  externalodessastepper.h  externalpoincarestepper.cpp  externalpoincarestepper.h  function.cpp  function.h  function.hpp  functionwrappers.cpp  functionwrappers.h  guessing.cpp  guessing.hpp  guessingwrapper.cpp  integrationstepper.cpp  integrationstepper.hpp  internalequationsystem.cpp  internalequationsystem.hpp  internalmapstepper.cpp  internalmapstepper.h  internalodessastepper.cpp  internalodessastepper.h  internalpoincarestepper.cpp  internalpoincarestepper.h  iteration.cpp  iteration.hpp  iterationwrapper.cpp  (+37 more)
source/num/test/: CMakeLists.txt  CMakeLists.txt_OBJECTS  externalequationsystem_test.cpp  externalequationsystem_test_p.cpp  externalequationsystem_test_pt.cpp  externalequationsystem_test_shared.cpp  externalequationsystem_test_shared.hpp  externalequationsystem_test_t.cpp  integrationstepper_test.cpp  internalequationsystem_test.cpp  internalequationsystem_test.hpp  mapstepper_test.cpp  numvtest.cpp  odessa_test.cpp  test  test.cpp
tools/: bundle_macos_dylibs.py
