enable_language(Fortran)
include_directories(../external/tinythread)
include_directories(../external/glew)
include_directories(../external/glfw3/include/GLFW)
include_directories(../external/loki)
add_library(datobjects OBJECT wave.cpp pythonwrapper.cpp) 
set_target_properties(datobjects PROPERTIES POSITION_INDEPENDENT_CODE TRUE)
